--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ node {
 	download = true
 //	version = "9.11.1"
 	version = "9.11.2"
+	distBaseUrl = 'https://direct.nodejs.org/dist/'
 	npmVersion = "5.6.0"
 }
 
